--- a/Reshape.Rmd
+++ b/Reshape.Rmd
@@ -5,9 +5,48 @@ date: "2023-11-28"
 output: html_document
 ---
 
-Welcome to this file!
-You are so cute!
+! remember to set working directory for the git file as well
 
+```{r}
+library(tidyverse)
 
+gdp <- read_delim("../Desktop/Academics/UW /INFO201/data/oecd-gdp.csv.bz2")
+gdp %>% 
+  head()
+```
 
-Let's put it in GitHub!
+```{r}
+gdpLong <-gdp %>%
+  pivot_longer(!c(country, indicator),
+               names_to = "year",
+               values_to = "gdp") %>% 
+  mutate(year = as.numeric(year))
+gdpLong %>%
+  head(10)
+
+```
+
+#WIDE form
+```{r}
+p <- data.frame(pregnant = c("Yes", "No"),
+                male = c(NA, 22),
+                female = c(11, 17))
+p
+```
+
+#LONG form
+```{r}
+p1 <- p %>% 
+  pivot_longer(c(male, female),
+               names_to = "sex",
+               values_to = "count")
+p1
+```
+
+```{r}
+p1 %>% 
+  pivot_wider(id_cols = pregnant,
+              names_from = sex,
+              values_from = count)
+```
+
